[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CageParam"
version = "0.1.0"
description = "Metal organic cage parametrization toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yuzhe Wang", email = "yuzhe547@mit.edu" }]
keywords = ["amber", "gaff", "resp", "multiwfn", "metal organic cage"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
workflow = ["snakemake-minimal>=7.32"]

[project.scripts]
pdb4munro        = "cagepipe.pdb4munro:main"
munro            = "cagepipe.munro:main"
tleapgen         = "cagepipe.tleapgen:main"
respfit          = "cagepipe.respfit:main"
chgass           = "cagepipe.chgass:main"
seasoning        = "cagepipe.seasoning:main"
filling          = "cagepipe.seasoning:main"
gaff-typing      = "cagepipe.gaff_typing:main"
cntlgen          = "cagepipe.cntlgen:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cagepipe = ["data/*.dat", "data/leaprc."]
